# pyfend

./: Cargo.toml  pyfend.pyi  pyproject.toml  readme.md  rustfmt.toml  test.py
.github/workflows/: ci.yml
src/: exchange_rates.rs  lib.rs
